k8s/deployment/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ponaik/gateway:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3

          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8081
#            initialDelaySeconds: 60
#            periodSeconds: 20
#          readinessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8081
#            initialDelaySeconds: 40
#            periodSeconds: 10
