k8s/deployment/order.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8082
  selector:
    app: orderservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: ponaik/orderservice:1.1.0
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 80
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 10
